--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "vue": "^3.0.0",
     "vue-axios": "^3.1.1",
     "vue-editor-js": "^2.0.1",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
