--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Huiyu Li",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,7 +20,8 @@
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "yup": "^0.31.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
