--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "mevn rest blog",
   "main": "server.js",
+  "engines": {
+    "node":"12.18.2"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
